[package]
name = "springd"
version = "0.1.0"
edition = "2021"
authors = ["MichaelFu <michael.fudenglong@qq.com>"]
description = "A http server benchmark tool, written in rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = ["derive", "cargo", "help"] }
clap_complete = "4.1.4"

[[bin]]
name = "springd"
